[tool.poetry]
name = "tutorialpackage"
version = "0.1.0"
description = "Um pacote para tutorial de pacotes"
authors = ["Samuel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
